[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/testSprites.png" type="Texture" id=1]
[ext_resource path="res://Scens/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Chair.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6 )

[sub_resource type="Animation" id=3]
resource_name = "Destroy"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 31 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 7.5 )

[node name="StaticBody2D" type="StaticBody2D"]
pause_mode = 1
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="Item" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="Shadow" type="Sprite" parent="Item"]
visible = false
position = Vector2( 0, 1 )
texture = ExtResource( 1 )
hframes = 4
vframes = 8
frame = 23

[node name="CollisionShape2D" type="CollisionShape2D" parent="Item"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Item"]
texture = ExtResource( 1 )
hframes = 4
vframes = 8
frame = 31

[node name="Hitbox" parent="Item" instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" parent="Item/Hitbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item"]
anims/Destroy = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="StaticCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 0.6, 0.55 )

[connection signal="area_entered" from="Item/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Item/Hitbox"]
